[tool.poetry]
name = "leetcode-dison"
version = "0.1.0"
description = ""
authors = ["dison <dison0509@gmail.com>"]
readme = "README.md"
packages = [{include = "leetcode_dison"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
